--- a/css/style.css
+++ b/css/style.css
@@ -131,6 +131,7 @@ body{
     line-height: 1.5;
     color: var(--Grayish-Blue);
 }
+/* section mail */
 .email{
     padding: var(--padding-section);
     background-image: linear-gradient(to bottom, #fff 50%, var(--Very-Dark-Cyan) 50%);
@@ -146,6 +147,73 @@ body{
     font-size: 1.8rem;
     margin-bottom: 2rem;
 }
+/* section footer */
+.footer{
+    background-color: var(--Very-Dark-Cyan);
+}
+.footer__logo{
+    max-width: 200px;
+    display: block;
+    margin-bottom: 30px;
+}
+.footer__directions{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.footer__paragraph{
+    color: #fff;
+    display: flex;
+    gap: 20px;
+    align-items:baseline;
+}
+.footer__icon{
+    position: relative;
+    top: 4px;
+}
+.footer__list{
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    text-decoration: none;
+    color: #fff;
+    list-style: none;
+}
+.footer__list--first{
+    margin: 30px 0 20px;
+}
+.footer__item{
+    color: #fff;
+}
+.footer__link{
+    color: #fff;
+    text-decoration: none;
+}
+.footer__contact{
+    color: #fff;
+    margin-top: 30px;
+    text-align: center;
+}
+.footer__socialMedia{
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.footer__media{
+    display: inline-flex;
+    border: 1px solid #fff;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;    
+    align-items: center;
+    justify-content: center;
+}
+.footer__copy{
+    margin-top: 30px;
+}
+
+
 
 /* 
 .attribution { font-size: 11px; text-align: center; }
